# Barra_copycat

./: .gitignore  CNE5.md  LICENSE  README.md  README_NEW.md  Verification.md  pyproject.toml  setup.py
barra_copycat/: cne5.py  cne5_covariance.py  cne5_risk.py  model.py  styles.py
barra_copycat/cne5_factors/: __init__.py  beta.py  book_to_price.py  earnings_yield.py  growth.py  leverage.py  liquidity.py  momentum.py  nonlinear_size.py  residual_volatility.py  size.py
barra_copycat/tests/: test_math.py  test_model.py  test_utils.py
cne5/: README.md  cne5.py  cne5_covariance.py  cne5_risk.py  math.py  model.py
cne5/cne5_factors/: __init__.py  _utils.py  beta.py  book_to_price.py  earnings_yield.py  growth.py  leverage.py  liquidity.py  momentum.py  nonlinear_size.py  residual_volatility.py  size.py
toraniko/: model.py  styles.py  utils.py
verification/: README.md  __init__.py  covariance_validation.py  factor_validation.py  specific_risk_validation.py  utils.py
