[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cne5"
version = "1.1.0"
description = "A multi-factor equity risk model for quantitative trading."
authors = ["liuyizhou <liuyizhouye@outlook.com>"]
maintainers = ["liuyizhou <liuyizhouye@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/liuyizhouye/Barra_copycat"
repository = "https://github.com/liuyizhouye/Barra_copycat"
keywords = ["risk", "model", "portfolio", "optimization", "factor", "quant", "quantitative", "finance", "trading"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "~1.26.2"
polars = "~1.0.0"

[tool.poetry.dev-dependencies]
pytest = "~7.4.4"

[tool.poetry.urls]
homepage = "https://github.com/liuyizhouye/Barra_copycat"
repository = "https://github.com/liuyizhouye/Barra_copycat"
issues = "https://github.com/liuyizhouye/Barra_copycat/issues"
changelog = "https://github.com/liuyizhouye/Barra_copycat/releases"

[tool.ruff]
line-length = 120
fix = false
select = ["E", "F", "I", "N", "Q", "R", "S", "T", "U", "W", "Y"]

[tool.black]
line-length = 120
